# mkproj_texcgen

./: .gitignore  Cargo.toml  README.md  release.toml  repo.toml
default/: default_template.rs
release_notes/: v3-release_note.md
src/: .future-incompat-report.json  .rustc_info.json  builder.rs  generated.rs  main.rs  template.rs
src/debug/.fingerprint/addr2line-bc9cc3dc316f3af3/: lib-addr2line  lib-addr2line.json
src/debug/.fingerprint/adler-e1da2df5b85d17ce/: lib-adler  lib-adler.json
src/debug/.fingerprint/aho-corasick-c4f6419e7cdc59cc/: lib-aho_corasick  lib-aho_corasick.json
src/debug/.fingerprint/ansi_term-ea6913e3a9926d4e/: lib-ansi_term  lib-ansi_term.json
src/debug/.fingerprint/anyhow-3792994dacbed431/: lib-anyhow  lib-anyhow.json
src/debug/.fingerprint/anyhow-6ce0635020b63064/: run-build-script-build-script-build  run-build-script-build-script-build.json
src/debug/.fingerprint/anyhow-ad73e5d4daf5b619/: build-script-build-script-build  build-script-build-script-build.json
src/debug/.fingerprint/app_dirs2-57da6221b6ad9c01/: lib-app_dirs2  lib-app_dirs2.json
src/debug/.fingerprint/atty-66eaed7b83bed0e4/: lib-atty  lib-atty.json
src/debug/.fingerprint/autocfg-5788d3b0c0ad14fb/: lib-autocfg  lib-autocfg.json
src/debug/.fingerprint/backtrace-43579cfc2fd542fa/: build-script-build-script-build  build-script-build-script-build.json
src/debug/.fingerprint/backtrace-e1b0b00dc2e97b75/: run-build-script-build-script-build  run-build-script-build-script-build.json
texcgen-macro/: Cargo.toml
texcgen-macro/src/: lib.rs
(+733 files in other folders)
