[package]
name = "texcgen-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }
texcore = {version = "0.4.7", features = ["texcreate_template"]}
tokio = { version = "1.24.1", features = ["full"] }
